--- a/Modelbouwer/App.xaml
+++ b/Modelbouwer/App.xaml
@@ -3,7 +3,8 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="clr-namespace:Modelbouwer"
-	StartupUri="MainWindow.xaml">
+	StartupUri="MainWindow.xaml"
+	>
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
