--- a/Modelbouwer/View/SupplierManagement.xaml
+++ b/Modelbouwer/View/SupplierManagement.xaml
@@ -70,7 +70,7 @@
 		<!--#endregion-->
 
 		<!--#region Datafields-->
-		<TabControl Grid.Row="1" Style="{DynamicResource Default TabControl}">
+		<TabControl x:Name="TabControl" Grid.Row="1" Style="{DynamicResource Default TabControl}">
 			<!--#region General supplier information tab-->
 			<TabItem Header="{StaticResource Edit.Supplier.Tab.General.Label}" Style="{DynamicResource Default TabItem}">
 				<Grid>
@@ -452,7 +452,7 @@
 			<!--#endregion-->
 
 			<!--#region Contactpersons for selected supplier-->
-			<TabItem Header="{StaticResource Edit.Supplier.Tab.Contacts.Label}" Style="{DynamicResource Default TabItem}">
+			<TabItem x:Name="ContactsTab" Header="{StaticResource Edit.Supplier.Tab.Contacts.Label}" Style="{DynamicResource Default TabItem}">
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="*" />
